IndoorMobileRobotBody/log/build_2023-08-16_14-33-36/voice_control/stderr.log
  File "/home/rslam/Desktop/Indoor_Mobile_Robotic_Arm/install/voice_control/lib/python3.8/site-packages/voice_control/voice_command.py", line 32
    self.url = pass
               ^
SyntaxError: invalid syntax

